<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DN">
    <RelativeLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:background="@color/colorBlustran"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/quaylai"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:text="@string/back"
            android:textSize="20dp"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:text="@string/thdn"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/li1"
        android:orientation="vertical"
        android:layout_width="match_parent"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/action"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="150dp"
            android:text="@string/nsdt"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/sdt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="55dp"
            android:background="@color/colorLightCyan"
            android:layout_width="300dp"
            android:inputType="number"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="341dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="35dp"
            android:text="@string/thongtin"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="280dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/whatsapp"
            android:layout_width="341dp"
            android:layout_height="60dp"
            android:paddingLeft="50dp"
            android:layout_marginLeft="35dp"
            android:textAllCaps="false"
            android:drawablePadding="-50dp"
            android:background="@color/colorLightCyan"
            android:drawableLeft="@drawable/whatsapp"
            android:text="@string/whatapp" />
        <Button

            android:id="@+id/sms"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:layout_marginTop="350dp"
            android:layout_width="341dp"
            android:background="@color/colorLightCyan"
            android:layout_marginLeft="35dp"
            android:text="@string/sms"
            android:layout_height="60dp"/>
    </RelativeLayout>
</RelativeLayout>