<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sep2_dn">
    <LinearLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:background="@color/colorBlustran"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/quaylai"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:text="@string/back"
            android:textSize="20dp"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/thdn"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/li2"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_below="@+id/action"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="150dp"
            android:text="@string/masms"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/sdtvn"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:textStyle="bold"
            android:textColor="@color/colorLightCyan"
            android:layout_marginLeft="100dp"
            android:layout_height="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/li3"
        android:layout_below="@+id/li2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/code"
            android:inputType="number"
            android:background="@color/colorLightCyan"
            android:layout_width="300dp"
            android:layout_height="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/li3"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/next"
            android:textAllCaps="false"
            android:layout_marginLeft="50dp"
            android:layout_width="300dp"
            android:background="@color/colorLightCyan"
            android:textColor="@color/colorBlack"
            android:text="@string/next"
            android:layout_height="35dp"/>
        <TextView
            android:id="@+id/errorsms"
            android:layout_width="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlustran"
            android:text="@string/keyerror"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="320dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/colorBlack"
            android:text="@string/thongtinma"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>