<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ngon_ngu">
    <RelativeLayout
        android:id="@+id/li1"
        android:layout_width="match_parent"
        android:background="@color/colorBlu"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/back"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_keyboard_backspace_white_48dp" />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"
            android:textSize="20dp"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fram7" />
    </RelativeLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/li2"
        android:layout_below="@+id/li1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/ngonngu"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="60dp"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:text="@string/tv"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/baseline_navigate_next_black_18dp" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/line" />
    <LinearLayout
        android:id="@+id/li3"
        android:layout_below="@id/li2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:text="@string/phienban"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="240dp"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:text="20185v.2"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>