<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".step4_DN">
    <LinearLayout
        android:id="@+id/li1"
        android:layout_width="match_parent"
        android:background="@color/colorBlu"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/backdndk"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_keyboard_backspace_white_48dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/li2"
        android:background="@color/colorLightBlu"
        android:orientation="vertical"
        android:layout_below="@+id/li1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/colorwhite"
            android:textSize="30dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="-15dp"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/ttemail"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/email2"
            android:textStyle="bold"
            android:textColor="@color/colorwhite"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginLeft="30dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="-20dp"
            android:drawableBottom="@drawable/solidbuttom"
            android:layout_width="341dp"
            android:layout_height="40dp"/>
    </LinearLayout>

</RelativeLayout>